updates to student presentation

--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -530,9 +530,8 @@ div.tocify {
 </div>
 <div id="jamie" class="section level4">
 <h4>Jamie</h4>
-<p><strong>Drivers of coral reef community structure</strong></p>
-<p>Question:<br />
-Data:</p>
+<p><strong>Disentangling the importance of drivers that structure benthic communities</strong></p>
+<p>Determine what environmental and biological factors drive benthic community structure and how their importance varies spatially (i.e. local to regional), using data from 12 habitat types in the Bahamas.</p>
 </div>
 <div id="lizzie" class="section level4">
 <h4>Lizzie</h4>
