--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -540,8 +540,8 @@ div.tocify {
 </div>
 <div id="marissa" class="section level4">
 <h4>Marissa</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p><strong>Yellow fever and dengue interactions in Brazil</strong></p>
+<p>Using monthly human case data of yellow fever and dengue in Brazil, I will analyze the spatial trends of the two diseases to identify whether immunity dynamics with dengue contribute to determining the spatial distribution of yellow fever virus.</p>
 </div>
 <div id="meghan" class="section level4">
 <h4>Meghan</h4>
@@ -565,8 +565,13 @@ div.tocify {
 </div>
 <div id="tyler" class="section level4">
 <h4>Tyler</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p><strong>Effects of anthropogenic disturbance on the structure of species interaction networks</strong></p>
+<p>How does anthropogenic disturbance affect the structure of species interaction networks? We (Beth and I) have compiled a database of ~30 published datasets which examine changes in network structure across different levels of disturbance. Each dataset consists of two or more species interaction networks measured at study sites exhibiting different levels of anthropogenic disturbance (such as fragmentation, defaunation, invasive species, etc.). We will use network analysis to quantify the structure of each network, and then use meta-analytical techniques to draw conclusions about the general effects of distrubance on network structure across the ~30 datasets.</p>
+</div>
+<div id="nick" class="section level4">
+<h4>Nick</h4>
+<p><strong>Response of species traits to deforestation and agricultural intensification in Costa Rica</strong></p>
+<p>Which traits make birds most susceptible to deforestation and agricultural intensification? Here I plan to use bird banding data from southern Costa Rica in combination with species and individual-level traits and environmental covariates to address this question.</p>
 </div>
 
 
@@ -594,7 +599,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
