--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -551,7 +551,7 @@ div.tocify {
 <div id="nicole" class="section level4">
 <h4>Nicole</h4>
 <p><strong>What predicts pathogen sharing among host species across phylogenetic distance?</strong></p>
-<p>In this study, we are trying to determine which factors predict parasite-sharing (or a potential spillover event) for different host species. What factors matter most? Is it (1) phylogenetic distance between host species and pathogen species (evolutionary factor), or (2) similarity in host or pathogen traits, e.g., host behavior, host body size, range, pathogen type, mode of transmission, etc. (ecological factors)?</p>
+<p>In this study, we are trying to determine which factors predict parasite-sharing (or a potential spillover event) for different host species. What factors matter most? Is it (1) phylogenetic distance between host species and pathogen species (evolutionary factor), or (2) similarity in host or pathogen traits, e.g., host behavior, host body size, range, pathogen type, mode of transmission, etc. (ecological factors)? We have data on such host and pathogen traits from about ~400 mammalian hosts and ~2000 pathogens that we have gathered from the literature.</p>
 </div>
 <div id="priscilla" class="section level4">
 <h4>Priscilla</h4>
@@ -599,7 +599,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
