--- a/03-C-heterogeneity.html
+++ b/03-C-heterogeneity.html
@@ -608,7 +608,7 @@ div.tocify {
 </ul></li>
 <li><code>V1&lt;-varConstPower(form =∼ DML)</code>
 <ul>
-<li><span class="math inline">\(\epsilon_{ij} \sim N(0, \sigma^2 \times (\delta_1 + |\mathrm{DML}_{ij}|^{\delta_2}^2))\)</span></li>
+<li><span class="math inline">\(\epsilon_{ij} \sim N(0, \sigma^2 \times (\delta_1 + |\mathrm{DML}_{ij}|^{\delta_2})^2)\)</span></li>
 </ul></li>
 <li><code>V1&lt;-varComb(varIdent(form =∼ 1 | fMONTH), varExp(form =∼ DML))</code>
 <ul>
