--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -535,8 +535,8 @@ div.tocify {
 </div>
 <div id="lizzie" class="section level4">
 <h4>Lizzie</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p><strong>The Effect of Rotational Cattle Grazing on Soil Nutrient Dynamics</strong></p>
+<p>By investigating the fluxes in greenhouse gases and in soil nitrate and ammonia levels before, during, and after grazing events, I will study the effects of rotational cattle grazing on soil nutrient dynamics.</p>
 </div>
 <div id="marissa" class="section level4">
 <h4>Marissa</h4>
