--- a/04-B-binary-data.html
+++ b/04-B-binary-data.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Tad and Meghan Howard" />
 
 
-<title>GLM with count, binary. and proportional data</title>
+<title>GLM with count, binary, and proportional data</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -512,7 +512,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">GLM with count, binary. and proportional data</h1>
+<h1 class="title toc-ignore">GLM with count, binary, and proportional data</h1>
 <h4 class="author"><em>Tad and Meghan Howard</em></h4>
 
 </div>
