starting to edit 05-A

--- a/05-A-Bayesian-linear-models.html
+++ b/05-A-Bayesian-linear-models.html
@@ -530,6 +530,11 @@ div.tocify {
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
+<ul>
+<li>If <span class="math inline">\(\theta\)</span> is a model and <span class="math inline">\(y\)</span> is observed data, then frequentists estimate <span class="math inline">\(P(y|\theta)\)</span> and Bayesians estimate <span class="math inline">\(P(\theta|y)\)</span>.</li>
+<li><span class="math inline">\(p(\theta|y)\)</span> (the posterior distibution) <span class="math inline">\(\propto\)</span> <span class="math inline">\(p(\theta)\)</span> (prior information about parameters) <span class="math inline">\(\times p(y|\theta)\)</span> (the likelihood function)</li>
+<li></li>
+</ul>
 </div>
 <div id="analysis-example" class="section level3">
 <h3>Analysis Example</h3>
