Finished key notes for 05-A and 05-B.

--- a/05-A-Bayesian-linear-models.html
+++ b/05-A-Bayesian-linear-models.html
@@ -574,6 +574,12 @@ div.tocify {
 <li>Marginal distribution: gives probabilty for a particular parameter summed over all values of other parameters. (This is what you get if you summarize parameter samples independently.)</li>
 <li>Conditional distribution: gives probabilty for a particular parameter holding other parameters at specific values.</li>
 </ul></li>
+</ul>
+<p>Joint posterior distribution of <span class="math inline">\(\beta_0\)</span> and <span class="math inline">\(\beta_1\)</span>: <img src="images/05-A/unnamed-chunk-2-1.png" width="672" /></p>
+<p>Marginal distribution of <span class="math inline">\(\beta_0\)</span>: <img src="images/05-A/unnamed-chunk-3-1.png" width="672" /></p>
+<p>Conditional distribution of <span class="math inline">\(\beta_0\)</span> when <span class="math inline">\(\beta_1 = 4\)</span> (red line) or <span class="math inline">\(\beta_1 = 8\)</span> (blue line).</p>
+<p><img src="images/05-A/unnamed-chunk-4-1.png" width="672" /></p>
+<ul>
 <li><p>Inference is based on <strong>visualizing</strong> and summarizing the posterior distributions of parameters, predicted future observations, and quantities calculated from parameters.</p></li>
 <li>Make inferences (e.g. about effects of covariates) by summarizing samples of parameters from the posterior distribution:
 <ul>
