Added some R links for 05-B

--- a/05-B-Bayesian-priors.html
+++ b/05-B-Bayesian-priors.html
@@ -648,6 +648,11 @@ div.tocify {
 <li>Proceed with model selection and validation by examining information criteria (WAIC) and residuals. Repeat steps 1-10 as needed to find an acceptable model.</li>
 <li>Use samples from final model after the burn-in period to make inferences.</li>
 </ol>
+<p><strong>R Tools</strong></p>
+<ul>
+<li>The <code>coda</code> package is frequently used to visualize MCMC results.</li>
+<li>Check out the <code>ggmcmc</code> package for plotting MCMC results with <code>ggplot2</code>: <a href="http://xavier-fim.net/packages/ggmcmc/">website</a></li>
+</ul>
 </div>
 <div id="analysis-example" class="section level3">
 <h3>Analysis Example</h3>
