--- a/index.html
+++ b/index.html
@@ -430,13 +430,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="08-A-spatial-regression.html">Spatial regression</a>
+      <a href="08-A-mapping.html">Visualizing spatial data</a>
     </li>
     <li>
-      <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a>
+      <a href="08-B-spatial-regression.html">Spatial regression</a>
     </li>
     <li>
-      <a href="08-C-mapping.html">Visualizing spatial data</a>
+      <a href="08-C-spatial-ordination.html">Ordination approach to spatial analysis</a>
     </li>
   </ul>
 </li>
@@ -729,15 +729,15 @@ div.tocify {
 <td>8</td>
 <td>Mon</td>
 <td>Nov. 13</td>
-<td>Topic 13. <a href="08-A-spatial-regression.html">Spatial regression</a></td>
-<td>Jes</td>
+<td>Topic 13. <a href="08-A-mapping.html">Visualization of spatial data</a></td>
+<td>Tad</td>
 <td>Marissa</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Wed</td>
 <td>Nov. 15</td>
-<td>Topic 14. <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a></td>
+<td>Topic 14. <a href="08-B-spatial-regression.html">Spatial regression</a></td>
 <td>Jes</td>
 <td>Sandra</td>
 </tr>
@@ -745,7 +745,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Nov. 17</td>
-<td>Topic 15. <a href="08-C-mapping.html">Visualization of spatial data</a></td>
+<td>Topic 15. <a href="08-C-spatial-ordination.html">Ordination approach to spatial analysis</a></td>
 <td>Jes</td>
 <td>Tyler</td>
 </tr>
