Added plug for Chapter 17.

--- a/05-C-Advanced-bayesian-example.html
+++ b/05-C-Advanced-bayesian-example.html
@@ -525,7 +525,7 @@ div.tocify {
 <p><strong>Optional Reading:</strong></p>
 <blockquote>
 <p>Chapters 16 and 17 in Korner-Nievergelt et al. 2015. <em>Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.</em> Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">link</a></p>
-<p>* These chapters contain a data analysis checklist and information on how to report analyses in scientific papers.</p>
+<p>* These chapters contain a data analysis checklist and information on how to report analyses in scientific papers. Chapter 17 is particularly useful because it gives verbatim text for how you should describe the models that you fit.</p>
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
